# wallet-toolbox-rs

./: .gitignore  API_FFI.md  API_WASM.md  ARCHITECTURE.md  BRC42_IMPLEMENTATION_STATUS.md  CHANGELOG.md  COMPLETION_ROADMAP.md  COMPLETION_SUMMARY.md  CURRENT_WORK.md  Cargo.toml  FILES_TO_RESTORE.md  FINAL_RESTORATION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  HOW_IT_ALL_WORKS.md  INTEGRATION_PLAN.md  METANET_DESKTOP_INTEGRATION.md  NEXT_STEPS.md  PHASES.md  PROGRESS_UPDATE.md  PROJECT_STATUS.md  PURE_RUST_TRANSACTION_MODULE.md  README.md  RESTORATION_COMPLETE.md  RESTORATION_STATUS.md  RESTORATION_SUCCESS.md  ROADMAP.md  SDK_INTERFACES_SUMMARY.md  SESSION_SUMMARY_2025_10_09.md  SIMPLIFIED_INTEGRATION.md  STATUS.md  TAURI_INTEGRATION_EXAMPLE.md  TRANSLATION_COMPLETE_95_PERCENT.md  TRANSLATION_PLAN_UPDATED.md
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: lib.rs  managers.rs  setup.rs  tauri_commands.rs  wallet.rs
crates/wallet-core/src/beef/: mod.rs
crates/wallet-core/src/crypto/: keys.rs  mod.rs  signing.rs  symmetric.rs
crates/wallet-core/src/keys/: brc42.rs  brc43.rs  derivation.rs  key_deriver.rs  mod.rs
crates/wallet-core/src/managers/: simple_wallet_manager.rs  wallet_auth_manager.rs  wallet_settings_manager.rs
crates/wallet-core/src/managers/wallet_permissions_manager/: callbacks.rs  constants.rs  mod.rs  permission_request.rs  permission_validation.rs  token_management.rs  types.rs  utils.rs
crates/wallet-core/src/methods/: blockchain_queries.rs  create_action.rs  encrypt_decrypt.rs  hmac_operations.rs  internalize_action.rs  key_linkage.rs  list_actions.rs  list_outputs.rs  mod.rs  output_management.rs  process_action.rs  sign_action.rs  signature_operations.rs
crates/wallet-core/src/monitor/: mod.rs
crates/wallet-core/src/sdk/: action.rs  action_list.rs  action_process.rs  errors.rs  errors_README.md  mod.rs  types.rs  types_README.md  types_tests.rs  validation.rs  validation_args.rs  wallet_interface.rs
crates/wallet-core/src/services/: mod.rs
crates/wallet-core/src/signer/: mod.rs
crates/wallet-core/src/transaction/: mod.rs  outpoint.rs  script.rs  sighash.rs  transaction.rs  tx_input.rs  tx_output.rs
crates/wallet-core/src/utility/: index_all.rs  index_client.rs  mod.rs
crates/wallet-core/src/wab_client/: mod.rs
crates/wallet-core/tests/: simple_wallet_manager_tests.rs
crates/wallet-services/: Cargo.toml
crates/wallet-services/src/: collection.rs  error.rs  lib.rs  traits.rs  types.rs
crates/wallet-services/src/broadcaster/: arc.rs  mod.rs  types.rs
crates/wallet-services/src/chaintracker/: chaintracks.rs  mod.rs  types.rs
crates/wallet-services/src/exchange/: exchangeratesapi.rs  mod.rs  types.rs  whatsonchain.rs
crates/wallet-services/src/utxo/: mod.rs  script_hash.rs  types.rs  whatsonchain.rs
crates/wallet-storage/: Cargo.toml
crates/wallet-storage-sqlite/: Cargo.toml
crates/wallet-storage-sqlite/src/: basket_tag_label_ops.rs  cert_commission_ops.rs  lib.rs  migrations.rs  output_ops.rs  proven_tx_ops.rs  storage_sqlite.rs  transaction_ops.rs
crates/wallet-storage/src/: lib.rs  types.rs
crates/wallet-storage/src/methods/: attempt_to_post_reqs_to_network.rs  create_action.rs  generate_change.rs  get_beef_for_transaction.rs  internalize_action.rs  list_actions_spec_op.rs  list_certificates.rs  list_outputs_spec_op.rs  mod.rs  process_action.rs
crates/wallet-storage/src/schema/: entities.rs  mod.rs  primitives.rs  tables.rs
crates/wallet-storage/src/sync/: mod.rs
docs/: mapping.md
(+100 files in other folders)
