[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN license.md"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
wallet-storage = { path = "../wallet-storage" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }

# Cryptography dependencies for transaction signing
secp256k1 = { version = "0.28", features = ["rand", "recovery", "global-context"] }
sha2 = "0.10"
ripemd = "0.1"
hmac = "0.12"
aes-gcm = "0.10"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
