[package]
name = "wallet-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
rand = "0.8"
tokio = { version = "1.0", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
