[package]
name = "wallet-storage"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN license.md"

[lib]
path = "src/lib.rs"

[features]
# Backend feature flags to be implemented later
sqlite = []
mysql = []
indexeddb = []

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
