[package]
name = "wallet-storage"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN license.md"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
async-trait = "0.1"
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }

[features]
default = []
sqlite = ["rusqlite"]
mysql = []
indexeddb = []
rusqlite = ["dep:rusqlite"]
